--- a/styles/globals.css
+++ b/styles/globals.css
@@ -19,3 +19,26 @@ a {
 body {
   background: #202020;
 }
+.swiper-pagination-bullet-active {
+  background-color: #4338ca !important;
+}
+
+.swiper-container {
+  width: 400px;
+}
+
+.swiper-slide {
+  width: 600px;
+}
+
+@media screen and (min-width: 640px) {
+  .swiper-container {
+    width: 640px;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .swiper-container {
+    width: 768px;
+  }
+}
